--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,3 @@
-
 {
   "name": "Axonevo - Prontuário Médico",
   "short_name": "Axonevo",
@@ -10,7 +9,7 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg viewBox='0 0 256 256' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='256' height='256' fill='black'/%3E%3Cpath d='M32 128H80L90 108L100 148L115 68L130 188L176 128' stroke='%234ade80' stroke-width='16' stroke-linecap='round' stroke-linejoin='round'/%3E%3Crect x='184' y='104' width='16' height='48' fill='%234ade80' rx='4'/%3E%3C/svg%3E",
+      "src": "icon.svg",
       "sizes": "192x192 512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
